fixed white spaces on the right side of login and register pages

--- a/views/login.css
+++ b/views/login.css
@@ -12,6 +12,7 @@ html {
   background-image: url("./images/login-background.svg");
   background-repeat: no-repeat;
   background-size: cover;
+  overflow-x: hidden;
 }
 .heading {
   font-family: "Anton", sans-serif;
